--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/adaptiveIndex.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="adaptiveIndex.css">
 
 </head>
 <body>
 
   <div class="wrapper">
-
-    <header class="header"></header>
 
     <main class="main">
 
@@ -37,16 +35,16 @@
         <div class="content-container-about">
           <div class="about-container">
             <div class="card-container info-container1">
-              <img src="../img/aboutImg1.jpg" alt="" class="aboutImg aboutImg1">
+              <img src="img/aboutImg1.jpg" alt="" class="aboutImg aboutImg1">
               <div class="aboutText-card-container"><p class="aboutImg1-text">Рады сообщить Вам, что больше нет необходимости искать место для дружеских посиделок, романтических встреч и просто приятного отдыха в дружеской компании или даже в одиночестве. Вы уже нашли это место! И это место - наша кофейня! Провести приятный вечер в компании или за чашкой кофе почитать книгу наедине с собой, устроить романтический ужин или просто отведать хорошего кофе</p></div>
             </div>
             <div class="card-container info-container2">
-              <img src="../img/aboutImg2.jpg" alt="" class="aboutImg aboutImg2">
+              <img src="img/aboutImg2.jpg" alt="" class="aboutImg aboutImg2">
             </div>
             <div class="card-container info-container3">
               <div class="title-card-container"><h1 class="cardTitle">Немного о кофейне</h1></div>
               <div class="subTitle-card-container"><p class="cardSubText">Проведите приятный вечер в компании или за чашкой кофе наедине с собой и насладитесь книгой в нашей уютной и атмосферной кофейни.</p></div>
-              <img src="../img/aboutImg3.jpg" alt="" class="aboutImg aboutImg3">
+              <img src="img/aboutImg3.jpg" alt="" class="aboutImg aboutImg3">
               <div class="aboutText-card-container-media"><p class="cardSubText">Рады сообщить Вам, что больше нет необходимости искать место для дружеских посиделок, романтических встреч и просто приятного отдыха в дружеской компании или даже в одиночестве. Вы уже нашли это место! И это место - наша кофейня! Провести приятный вечер в компании или за чашкой кофе почитать книгу наедине с собой, устроить романтический ужин или просто отведать хорошего кофе</p></div>
             </div>
           </div>
@@ -57,23 +55,23 @@
         <div class="swiper menuSwiper">
           <h1 class="menuTitle">Самый лучший кофе</h1>
           <div class="swiper-wrapper">
-            <div class="swiper-slide swiper-slide-menuImg"><img src="../img/coffe1.png" alt="" width="300px" class="sliderItem"></div>
-            <div class="swiper-slide swiper-slide-menuImg"><img src="../img/coffe2.png" alt="" width="300px" class="sliderItem"></div>
-            <div class="swiper-slide swiper-slide-menuImg"><img src="../img/coffe3.png" alt="" width="300px" class="sliderItem"></div>
-            <div class="swiper-slide swiper-slide-menuImg"><img src="../img/coffe4.png" alt="" width="300px" class="sliderItem"></div>
-            <div class="swiper-slide swiper-slide-menuImg"><img src="../img/coffe5.png" alt="" width="300px" class="sliderItem"></div>
+            <div class="swiper-slide swiper-slide-menuImg"><img src="img/coffe1.png" alt="" width="300px" class="sliderItem"></div>
+            <div class="swiper-slide swiper-slide-menuImg"><img src="img/coffe2.png" alt="" width="300px" class="sliderItem"></div>
+            <div class="swiper-slide swiper-slide-menuImg"><img src="img/coffe3.png" alt="" width="300px" class="sliderItem"></div>
+            <div class="swiper-slide swiper-slide-menuImg"><img src="img/coffe4.png" alt="" width="300px" class="sliderItem"></div>
+            <div class="swiper-slide swiper-slide-menuImg"><img src="img/coffe5.png" alt="" width="300px" class="sliderItem"></div>
           </div>
         </div>
         <div class="navigation-swiper-container">
-          <button class="menuSwiperPrev swiperNavigationBtn"><img src="../img/btn.png" alt="" class="swiperPrevtImg"></button>
-          <button class="menuSwiperNext swiperNavigationBtn"><img src="../img/btn.png" alt="" class="swiperNextImg"></button>
+          <button class="menuSwiperPrev swiperNavigationBtn"><img src="img/btn.png" alt="" class="swiperPrevtImg"></button>
+          <button class="menuSwiperNext swiperNavigationBtn"><img src="img/btn.png" alt="" class="swiperNextImg"></button>
         </div>
       </section>
 
       <section class="actionSection grayBg">
         <div class="content-container-action">
           <div class="action-container">
-            <img src="../img/action.jpg" alt="" class="actionImg" width="790px" height="600px">
+            <img src="img/action.jpg" alt="" class="actionImg" width="790px" height="600px">
             <div class="action-info-container">
               <h1 class="actionTitle">Наши акции</h1>
               <ul class="actionList">
@@ -90,11 +88,11 @@
         <div class="content-container-gallery">
           <h1 class="galleryTitle">Галлерея кофейни</h1>
           <div class="gallery-container">
-            <figure class="gallery-item1"><img src="../img/gallery1.png" alt="" class="gallery-img"></figure>
-            <figure class="gallery-item2"><img src="../img/gallery2.png" alt="" class="gallery-img"></figure>
-            <figure class="gallery-item3"><img src="../img/gallery3.png" alt="" class="gallery-img"></figure>
-            <figure class="gallery-item4"><img src="../img/gallery4.png" alt="" class="gallery-img"></figure>
-            <figure class="gallery-item5"><img src="../img/gallery5.png" alt="" class="gallery-img"></figure>
+            <figure class="gallery-item1"><img src="img/gallery1.png" alt="" class="gallery-img"></figure>
+            <figure class="gallery-item2"><img src="img/gallery2.png" alt="" class="gallery-img"></figure>
+            <figure class="gallery-item3"><img src="img/gallery3.png" alt="" class="gallery-img"></figure>
+            <figure class="gallery-item4"><img src="img/gallery4.png" alt="" class="gallery-img"></figure>
+            <figure class="gallery-item5"><img src="img/gallery5.png" alt="" class="gallery-img"></figure>
           </div>
         </div>
       </section>
@@ -112,8 +110,8 @@
             </div>
           </div>
           <div class="navigation-swiper-container-reviews">
-            <button class="reviewsSwiperPrev swiperNavigationBtn"><img src="../img/btn.png" alt="" class="swiperPrevtImg"></button>
-            <button class="reviewsSwiperNext swiperNavigationBtn"><img src="../img/btn.png" alt="" class="swiperNextImg"></button>
+            <button class="reviewsSwiperPrev swiperNavigationBtn"><img src="img/btn.png" alt="" class="swiperPrevtImg"></button>
+            <button class="reviewsSwiperNext swiperNavigationBtn"><img src="img/btn.png" alt="" class="swiperNextImg"></button>
           </div>
         </div>
       </section>
@@ -142,6 +140,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="../js/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
