--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="card-container info-container3">
               <div class="title-card-container"><h1 class="cardTitle">Немного о кофейне</h1></div>
-              <div class="subTitle-card-container"><p class="cardSubText">Проведите приятный вечер в компании или за чашкой кофе наедине с собой и насладитесь книгой в нашей уютной и атмосферной кофейни.</p></div>
+              <div class="subTitle-card-container"><p class="cardSubText">Проведите приятный вечер в компании или за чашкой кофе наедине с собой и насладитесь книгой в нашей уютной и атмосферной кофейне.</p></div>
               <img src="img/aboutImg3.jpg" alt="" class="aboutImg aboutImg3">
-              <div class="aboutText-card-container-media"><p class="cardSubText">Рады сообщить Вам, что больше нет необходимости искать место для дружеских посиделок, романтических встреч и просто приятного отдыха в дружеской компании или даже в одиночестве. Вы уже нашли это место! И это место - наша кофейня! Провести приятный вечер в компании или за чашкой кофе почитать книгу наедине с собой, устроить романтический ужин или просто отведать хорошего кофе</p></div>
+              <div class="aboutText-card-container-media"><p class="cardSubText">Рады сообщить Вам, что больше нет необходимости искать место для дружеских посиделок, романтических встреч и просто приятного отдыха в дружеской компании или даже в одиночестве. Вы уже нашли это место! И это место - наша кофейня! Провести приятный вечер в компании или за чашкой кофе, почитать книгу наедине с собой, устроить романтический ужин или просто отведать хорошего кофе.</p></div>
             </div>
           </div>
         </div>
@@ -100,7 +100,7 @@
       <section class="reviewsSection brownBg">
         <div class="content-container-reviews">
           <div class="swiper reviewsSwiper">
-            <h1 class="reviewsTitle">Оставтьте отзыв</h1>
+            <h1 class="reviewsTitle">Оставьте отзыв</h1>
             <div class="swiper-wrapper">
               <div class="swiper-slide swiper-slide-textContainer">Ребята молодцы, делают свою работу на высоком уровне. Товары всегда новые, цены вполне доступные. Часто проводятся скидки, акции, что особо радует. Буду рекомендовать всем</div>
               <div class="swiper-slide swiper-slide-textContainer">Ребята молодцы, делают свою работу на высоком уровне. Товары всегда новые, цены вполне доступные. Часто проводятся скидки, акции, что особо радует. Буду рекомендовать всем</div>
